--- a/app/src/main/res/layout/row_comment.xml
+++ b/app/src/main/res/layout/row_comment.xml
@@ -11,6 +11,7 @@
         android:id="@+id/tv_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:maxLines="2" />
 
 </RelativeLayout>
